restrict-secrets-access/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-secrets-access-clusterroles
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
